Mar 6, 2007

* Allow for single option without list

Nov 23, 2006

* Force start of line after ....

Oct 22, 2006

* Allow tracing body of tests.  Suggested by Lukas Degener.

Oct 17, 2006

* Portability with SICStus 3.12.

Oct 13, 2006

* Better message for tests that succeeded but should have failed